# cpuminer-gr-avx2

./: .cproject  .gitignore  .project  AUTHORS  Dockerfile  INSTALL_LINUX  INSTALL_WINDOWS  Makefile.am  README.md  RELEASE_NOTES  aclocal.m4  algo-gate-api.c  algo-gate-api.h  api.c  build-allarch.sh  build-new.sh  build.sh  clean-all.sh  compat.h  configure  configure.ac  cpu-miner.c  cpu-miner.c.old  miner.h  msr_mod.c  msr_mod.cpp  msr_mod.h  readme.txt  sysinfos.c  util.c  virtual_memory.c  virtual_memory.h  winbuild-cross.sh
.github/workflows/: cpp.yml  deploy.yml
algo/argon2/argon2a/: argon2a.c
algo/argon2/argon2a/ar2/: cores.c
algo/argon2/argon2a/ar2/sj/: scrypt-jane-portable.h
algo/argon2/argon2d/argon2d/: argon2d_thread.c  core.c
algo/blake/: blake-hash-4way.h  sph-blake2s.h
algo/bmw/: bmw-hash-4way.h  bmw512-hash-4way.c
algo/cubehash/: cube-hash-2way.h  cubehash_sse2.h
algo/echo/: echo-hash-4way.h  sph_echo.c  sph_echo.h
algo/echo/aes_ni/: hash_api.h
algo/fugue/: fugue-aesni.c  fugue-aesni.h
algo/gr/: gr-4way.c  gr-4way.cpp  gr-gate-4way.c  gr-gate.c  gr-gate.h  gr.c  gr.cpp
algo/gr/cryptonote/: cryptonight.c  cryptonight.h  cryptonight.h_inline  cryptonight_dark.c  cryptonight_dark_lite.c  cryptonight_fast.c  cryptonight_lite.c  cryptonight_turtle.c  cryptonight_turtle_lite.c  soft_aes.h
algo/groestl/: groestl256-hash-4way.h  groestl512-hash-4way.c  groestl512-hash-4way.h  groestl512-intr-4way.h  sph_groestl.h
algo/groestl/aes_ni/: hash-groestl.c  hash-groestl.h  hash-groestl256.c  hash-groestl256.h
algo/jh/: jh-hash-4way.c  sph_jh.c
algo/keccak/: keccak-hash-4way.c  keccak-hash-4way.h  keccak-macros.c  sph_keccak.c  sph_keccak.h
algo/luffa/: luffa-hash-2way.h  luffa_for_sse2.h
algo/m7m/: m7m.c
algo/sha/: sha256-hash.c  sph_types.h
algo/shabal/: sph_shabal.h
algo/shavite/: shavite-hash-2way.h  shavite-hash-4way.h  sph_shavite.h
algo/simd/: nist.c  nist.h  simd-hash-2way.h
algo/skein/: skein-hash-4way.c
algo/whirlpool/: md-helper-4way.c  sph_whirlpool.h  whirlpool-hash-4way.h
algo/x16/: x16r-4way.c  x16r.c
compat/: gettimeofday.c  winansi.c  winansi.h
compat/pthreads/: pthread.h
crypto/: c_keccak.h
simd-utils/: intrlv.h  simd-128.h  simd-int.h
